--- a/reports/financialByHealthCarePlanReport.jrxml
+++ b/reports/financialByHealthCarePlanReport.jrxml
@@ -52,7 +52,7 @@
 			</textField>
 			<textField pattern="dd/MM/yyyy HH:mm:ss" isBlankWhenNull="true">
 				<reportElement x="393" y="0" width="162" height="20"/>
-				<textElement/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.util.Date"><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
@@ -60,42 +60,49 @@
 	<columnHeader>
 		<band height="28" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="5" width="270" height="20"/>
+				<reportElement x="0" y="5" width="150" height="20"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Médico]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="283" y="5" width="100" height="20"/>
+				<reportElement x="199" y="5" width="100" height="20"/>
 				<textElement textAlignment="Right">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Qtd. Consultas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="393" y="5" width="162" height="20"/>
+				<reportElement x="431" y="5" width="124" height="20"/>
 				<textElement textAlignment="Right">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor]]></text>
+				<text><![CDATA[Valor Total]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="311" y="5" width="100" height="20"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Valor Consulta]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="22" splitType="Stretch">
 			<textField evaluationTime="Auto">
-				<reportElement x="0" y="0" width="270" height="20"/>
+				<reportElement x="0" y="0" width="178" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{healthCarePlan}.name]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="283" y="0" width="100" height="20"/>
+				<reportElement x="199" y="2" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{qtyAppointments}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto" isBlankWhenNull="true">
-				<reportElement x="393" y="0" width="162" height="20"/>
+				<reportElement x="431" y="0" width="124" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount})]]></textFieldExpression>
 			</textField>
@@ -105,6 +112,11 @@
 					<pen lineStyle="Solid"/>
 				</graphicElement>
 			</line>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="311" y="2" width="100" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{appointmentAmount})]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
