--- a/reports/financialReport.jrxml
+++ b/reports/financialReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financialReport" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="26"/>
+	<property name="ireport.x" value="88"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="clinic" class="br.com.easyclinica.domain.entities.Clinic" isForPrompting="false"/>
 	<parameter name="start" class="java.util.Calendar" isForPrompting="false"/>
@@ -16,6 +16,7 @@
 	<field name="return" class="java.lang.Boolean"/>
 	<field name="appointmentAmount" class="java.math.BigDecimal"/>
 	<field name="procedureAmount" class="java.math.BigDecimal"/>
+	<field name="roomRateAmount" class="java.math.BigDecimal"/>
 	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{appointmentAmount}]]></variableExpression>
 	</variable>
@@ -141,7 +142,7 @@
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor da Consulta]]></text>
+				<text><![CDATA[Valor Total]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="23" width="802" height="1"/>
@@ -186,7 +187,7 @@
 			<textField evaluationTime="Auto">
 				<reportElement x="672" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{appointmentAmount}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount})]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="21" width="802" height="1"/>
@@ -217,7 +218,7 @@
 			<textField>
 				<reportElement x="672" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$V{total}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{total})]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
