--- a/WebContent/stylesheets/plugins/wdCalendar/calendar.css
+++ b/WebContent/stylesheets/plugins/wdCalendar/calendar.css
@@ -164,10 +164,10 @@ border-bottom:2px solid #c3d9ff;
 }
 .tg-dualmarker {
 	border-top:1px solid #ddd;
-	height:1em;
-	line-height:1em;
-	border-bottom:1px dotted #ddd;
-	margin-bottom:1em
+	margin-bottom:2em;
+	height:2em;
+	line-height:2em;
+	border-bottom:1px dotted #ddd;	
 }
 .tg-nowmarker {
 	position:absolute;
