--- a/reports/financialByHealthCarePlanReport.jrxml
+++ b/reports/financialByHealthCarePlanReport.jrxml
@@ -23,7 +23,7 @@
 	<title>
 		<band height="52" splitType="Stretch">
 			<textField evaluationTime="Auto">
-				<reportElement x="0" y="0" width="100" height="20"/>
+				<reportElement x="0" y="0" width="555" height="20"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -34,7 +34,7 @@
 				<textElement textAlignment="Center">
 					<font size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Resumo por Médico]]></text>
+				<text><![CDATA[Resumo por Convênio]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -64,7 +64,7 @@
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Médico]]></text>
+				<text><![CDATA[Convênio]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="199" y="5" width="100" height="20"/>
