--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -233,6 +233,10 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box fieldset div textarea{width:97%;height:100px;}
 .main .content .box fieldset div input.radio{margin:2px 5px 0 5px;border:none;}
 
+.main .content .box fieldset.full div input{width:95%;}
+
+.main .content .box fieldset .small input{width:100px!important;}
+
 .main .content .box fieldset .date{float:left;width:100%;}
 .main .content .box fieldset .date label.title{width:100%;}
 .main .content .box fieldset .date input{width:68px;}
@@ -268,7 +272,7 @@ table.easy tr td.tablenostyle{background:#ffffff!important;border:none;}
 .main .content .box fieldset .crm label.title{width:100%;}
 .main .content .box fieldset .crm input{width:200px;}
 
-.main .content .box fieldset .cep input{width:100px;}
+.main .content .box fieldset .cep input{width:100px!important;}
 
 .main .content .box fieldset .procedures{float:left;width:100%;}
 .main .content .box fieldset .procedures label{width:100%;}
