--- a/reports/financialByDoctorReport.jrxml
+++ b/reports/financialByDoctorReport.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financialByDoctorReport" language="groovy" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financialByDoctorReport" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -11,135 +11,284 @@
 	<field name="procedureAmount" class="java.math.BigDecimal"/>
 	<field name="roomRateAmount" class="java.math.BigDecimal"/>
 	<field name="appointmentAmount" class="java.math.BigDecimal"/>
+	<field name="assistantAmount" class="java.math.BigDecimal"/>
+	<field name="materialAmount" class="java.math.BigDecimal"/>
+	<field name="medicineAmount" class="java.math.BigDecimal"/>
 	<variable name="totalQtyAppointments" class="java.lang.Integer" calculation="Sum">
 		<variableExpression><![CDATA[$F{qtyAppointments}]]></variableExpression>
 	</variable>
-	<variable name="totalAmount" class="java.math.BigDecimal" calculation="Sum">
-		<variableExpression><![CDATA[$F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount}]]></variableExpression>
+	<variable name="totalAppointment" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{appointmentAmount}]]></variableExpression>
+	</variable>
+	<variable name="totalProcedure" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{procedureAmount}]]></variableExpression>
+	</variable>
+	<variable name="totalMaterial" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{materialAmount}]]></variableExpression>
+	</variable>
+	<variable name="totalMedicine" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{medicineAmount}]]></variableExpression>
+	</variable>
+	<variable name="totalRoomRate" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{roomRateAmount}]]></variableExpression>
+	</variable>
+	<variable name="totalAssistant" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{assistantAmount}]]></variableExpression>
+	</variable>
+	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount} + $F{materialAmount} + $F{medicineAmount} + $F{assistantAmount}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="57" splitType="Stretch">
-			<textField evaluationTime="Auto">
-				<reportElement x="0" y="0" width="555" height="20"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="0" y="30" width="555" height="20"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Resumo por Médico]]></text>
-			</staticText>
-		</band>
-	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch">
+		<band height="81" splitType="Stretch">
 			<textField evaluationTime="Auto" isBlankWhenNull="true">
-				<reportElement x="0" y="15" width="100" height="20"/>
+				<reportElement x="0" y="53" width="116" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["De: "+new SimpleDateFormat("dd/MM/yyyy").format($P{start}.getTime())]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="126" y="15" width="100" height="20"/>
+				<reportElement x="133" y="53" width="119" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Até: "+new SimpleDateFormat("dd/MM/yyyy").format($P{end}.getTime())]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy HH:mm:ss" isBlankWhenNull="true">
-				<reportElement x="393" y="0" width="162" height="20"/>
+				<reportElement x="393" y="53" width="409" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.util.Date"><![CDATA[new java.util.Date()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Gerado em " + new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="27" width="802" height="20"/>
+				<textElement textAlignment="Center">
+					<font size="15" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Resumo Financeiro por Médico]]></text>
+			</staticText>
+			<textField evaluationTime="Auto">
+				<reportElement x="0" y="0" width="802" height="20"/>
+				<textElement textAlignment="Center">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{clinic}.name]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="76" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="1.5"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="0" y="24" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="1.5"/>
+				</graphicElement>
+			</line>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="41" splitType="Stretch">
+		<band height="45" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="15" width="270" height="20"/>
+				<reportElement x="0" y="17" width="126" height="20"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Médico]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="283" y="15" width="100" height="20"/>
+				<reportElement x="133" y="17" width="78" height="20"/>
 				<textElement textAlignment="Right">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Qtd. Consultas]]></text>
+				<text><![CDATA[Qtd. Atend.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="393" y="15" width="162" height="20"/>
+				<reportElement x="725" y="17" width="77" height="20"/>
 				<textElement textAlignment="Right">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor]]></text>
+				<text><![CDATA[Total Geral]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="222" y="5" width="68" height="32"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Especialid.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="301" y="17" width="86" height="20"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Proced.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="398" y="5" width="64" height="32"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Materiais]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="473" y="17" width="76" height="20"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Medic.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="557" y="5" width="77" height="32"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total Taxa de Sala]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="641" y="5" width="77" height="32"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total de Assist.]]></text>
+			</staticText>
+			<line>
+				<reportElement x="0" y="42" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="1.25"/>
+				</graphicElement>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="23" splitType="Stretch">
-			<textField evaluationTime="Auto">
-				<reportElement x="0" y="0" width="270" height="20"/>
+			<textField isStretchWithOverflow="true" evaluationTime="Auto">
+				<reportElement x="0" y="0" width="126" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{doctor}.name]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="283" y="0" width="100" height="20"/>
+				<reportElement x="133" y="0" width="78" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{qtyAppointments}]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Auto" isBlankWhenNull="true">
-				<reportElement x="393" y="0" width="162" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount})]]></textFieldExpression>
-			</textField>
 			<line>
-				<reportElement x="0" y="21" width="555" height="1"/>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="21" width="802" height="1"/>
 				<graphicElement>
 					<pen lineStyle="Solid"/>
 				</graphicElement>
 			</line>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="222" y="0" width="68" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{appointmentAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="725" y="0" width="77" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount} + $F{materialAmount} + $F{medicineAmount} + $F{assistantAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="301" y="0" width="86" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="398" y="0" width="64" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{materialAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="473" y="0" width="76" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{medicineAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="557" y="0" width="77" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{roomRateAmount})]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Auto" isBlankWhenNull="true">
+				<reportElement x="641" y="0" width="77" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{assistantAmount})]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="44" splitType="Stretch">
+		<band height="23" splitType="Stretch">
 			<textField>
-				<reportElement x="421" y="11" width="80" height="20"/>
+				<reportElement x="682" y="3" width="80" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.String"><![CDATA["Página "+$V{PAGE_NUMBER}+" / "]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="508" y="11" width="40" height="20"/>
+				<reportElement x="762" y="3" width="40" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch">
-			<staticText>
-				<reportElement x="226" y="0" width="44" height="20"/>
-				<textElement>
-					<font size="12" isBold="true" isPdfEmbedded="false"/>
-				</textElement>
-				<text><![CDATA[TOTAL]]></text>
-			</staticText>
+		<band height="37" splitType="Stretch">
 			<textField>
-				<reportElement x="393" y="0" width="162" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalAmount})]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="283" y="0" width="100" height="20"/>
+				<reportElement x="133" y="9" width="78" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{totalQtyAppointments}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="727" y="9" width="75" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{total})]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="3" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="1.5"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement x="0" y="9" width="126" height="20"/>
+				<textElement>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="222" y="9" width="68" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalAppointment})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="301" y="9" width="86" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalProcedure})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="398" y="9" width="64" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalMaterial})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="473" y="9" width="76" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalMedicine})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="558" y="9" width="76" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalRoomRate})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="642" y="9" width="76" height="20"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{totalAssistant})]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="32" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="1.5"/>
+				</graphicElement>
+			</line>
 		</band>
 	</summary>
 </jasperReport>
