--- a/reports/financialReport.jrxml
+++ b/reports/financialReport.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="financialReport" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="88"/>
+	<property name="ireport.x" value="92"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="clinic" class="br.com.easyclinica.domain.entities.Clinic" isForPrompting="false"/>
 	<parameter name="start" class="java.util.Calendar" isForPrompting="false"/>
@@ -17,8 +17,11 @@
 	<field name="appointmentAmount" class="java.math.BigDecimal"/>
 	<field name="procedureAmount" class="java.math.BigDecimal"/>
 	<field name="roomRateAmount" class="java.math.BigDecimal"/>
+	<field name="materialAmount" class="java.math.BigDecimal"/>
+	<field name="medicineAmount" class="java.math.BigDecimal"/>
+	<field name="assistantAmount" class="java.math.BigDecimal"/>
 	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
-		<variableExpression><![CDATA[$F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount}]]></variableExpression>
+		<variableExpression><![CDATA[$F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount} + $F{materialAmount} + $F{medicineAmount} + $F{assistantAmount}]]></variableExpression>
 	</variable>
 	<background>
 		<band splitType="Stretch"/>
@@ -39,10 +42,22 @@
 				</textElement>
 				<text><![CDATA[Relatório Financeiro]]></text>
 			</staticText>
+			<line>
+				<reportElement x="0" y="26" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="2.0"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="0" y="46" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="2.0"/>
+				</graphicElement>
+			</line>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="59" splitType="Stretch">
+		<band height="61" splitType="Stretch">
 			<textField evaluationTime="Auto">
 				<reportElement x="150" y="12" width="102" height="20"/>
 				<textElement/>
@@ -94,55 +109,41 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="27" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<staticText>
-				<reportElement x="18" y="0" width="62" height="20"/>
+				<reportElement x="3" y="0" width="62" height="20"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Data]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="92" y="0" width="62" height="20"/>
+				<reportElement x="70" y="0" width="261" height="20"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Paciente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="207" y="0" width="62" height="20"/>
+				<reportElement x="335" y="1" width="141" height="20"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Convênio]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="322" y="0" width="62" height="20"/>
+				<reportElement x="484" y="1" width="256" height="20"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Médico]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="441" y="0" width="100" height="20"/>
+				<reportElement x="747" y="1" width="52" height="20"/>
 				<textElement textAlignment="Center">
-					<font isBold="true"/>
+					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Retorno?]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="555" y="0" width="100" height="20"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Especialidade]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="672" y="0" width="100" height="20"/>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Valor Total]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="23" width="802" height="1"/>
@@ -150,48 +151,130 @@
 					<pen lineWidth="2.0"/>
 				</graphicElement>
 			</line>
+			<line>
+				<reportElement x="0" y="-2" width="802" height="1"/>
+				<graphicElement>
+					<pen lineWidth="2.0"/>
+				</graphicElement>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="24" splitType="Stretch">
+		<band height="74" splitType="Stretch">
 			<textField evaluationTime="Auto">
-				<reportElement x="18" y="0" width="62" height="20"/>
+				<reportElement x="3" y="0" width="62" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[new SimpleDateFormat("dd/MM/yyyy").format($F{appointmentDate}.getTime())]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Auto">
-				<reportElement x="207" y="0" width="100" height="20"/>
+			<textField isStretchWithOverflow="true" evaluationTime="Auto">
+				<reportElement x="335" y="0" width="141" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{healthCarePlan}.name]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Auto">
-				<reportElement x="92" y="0" width="100" height="20"/>
+			<textField isStretchWithOverflow="true" evaluationTime="Auto">
+				<reportElement x="71" y="0" width="260" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{patient}.name]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Auto">
-				<reportElement x="321" y="0" width="100" height="20"/>
+			<textField isStretchWithOverflow="true" evaluationTime="Auto">
+				<reportElement x="484" y="1" width="256" height="20"/>
 				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{doctor}.name]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{doctor}.name + " (" + $F{specialty}.name + ")"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="441" y="0" width="100" height="20"/>
+				<reportElement x="747" y="0" width="52" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[($F{return} ? "X" : "")]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Auto">
-				<reportElement x="555" y="0" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{specialty}.name]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Auto">
-				<reportElement x="672" y="0" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount})]]></textFieldExpression>
+				<reportElement x="701" y="46" width="98" height="20"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{materialAmount} + $F{medicineAmount} + $F{assistantAmount} + $F{procedureAmount} + $F{roomRateAmount} + $F{appointmentAmount})]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="21" width="802" height="1"/>
+				<reportElement x="0" y="70" width="802" height="1"/>
 			</line>
+			<textField>
+				<reportElement x="405" y="46" width="120" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{procedureAmount})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="636" y="46" width="59" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{roomRateAmount})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="531" y="46" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{appointmentAmount})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="71" y="46" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{materialAmount})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="176" y="46" width="120" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{medicineAmount})]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="301" y="46" width="100" height="20"/>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($F{assistantAmount})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="71" y="26" width="100" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total de Materiais]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="176" y="26" width="120" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total de Medicamentos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="301" y="26" width="100" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total de Assistentes]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="405" y="26" width="120" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Total de Procedimentos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="531" y="26" width="100" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Valor Consulta]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="636" y="26" width="59" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tx. Sala]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="701" y="26" width="98" height="20"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Valor Total]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
@@ -209,14 +292,14 @@
 	<summary>
 		<band height="23" splitType="Stretch">
 			<staticText>
-				<reportElement x="555" y="0" width="100" height="20"/>
+				<reportElement x="595" y="3" width="100" height="20"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Valor Total:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="672" y="0" width="100" height="20"/>
+				<reportElement x="699" y="3" width="100" height="20"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[java.text.NumberFormat.getCurrencyInstance(new Locale("pt", "br")).format($V{total})]]></textFieldExpression>
 			</textField>
