relatorio de recibos

--- a/reports/financialByDoctorReport.jrxml
+++ b/reports/financialByDoctorReport.jrxml
@@ -56,7 +56,7 @@
 			<textField pattern="dd/MM/yyyy HH:mm:ss" isBlankWhenNull="true">
 				<reportElement x="393" y="53" width="409" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression class="java.lang.String"><![CDATA["Gerado em " + new java.util.Date()]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Gerado em " + new SimpleDateFormat("dd/MM/yyyy HH:mm:ss", new Locale("pt", "BR")).format(new java.util.Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="0" y="27" width="802" height="20"/>
