inserindo compromisso na agenda

--- a/WebContent/stylesheets/style.css
+++ b/WebContent/stylesheets/style.css
@@ -565,21 +565,35 @@ ul.printings li{padding:5px 0;}
 
 .schedule .time {
 	float: left; 
-	width: 100px;
+	width: 200px;
+	font-weight: bold;
 }
 
 .schedule .time span {
 	float: left;
 }
 
-.schedule .time .btnaddevent {
+.schedule .time a.btnaddevent {
 	float: left;
-	padding:2px;
-	margin: 0 5px;
+	background-repeat:no-repeat;
 	background-image:url(/images/icons/add.png);
+	cursor:pointer;
+	margin: 0 5px;
+	padding: 2px 10px;
+	text-decoration:none;
+}
+
+.schedule .time input {
+	float:left;
+	width:100px;
+	padding:4px 6px;
+	border-color:#CCCCCC #DDDDDD #DDDDDD #CCCCCC;
+	border-right:1px solid #DDDDDD;
+	border-style:solid;
+	border-width:2px 1px 1px 2px;
 }
 
 .schedule table.easy {
 	float:left; 
-	width: 500px;
+	width: 400px;
 }
